mfem_mgis_library(MFEMMGIS
  Config.cxx
  Profiler.cxx
  Parameter.cxx
  Parameters.cxx
  FiniteElementDiscretization.cxx
  PartialQuadratureSpace.cxx
  PartialQuadratureFunction.cxx
  Behaviour.cxx
  Material.cxx
  BehaviourIntegrator.cxx
  BehaviourIntegratorBase.cxx
  BehaviourIntegratorFactory.cxx
  MultiMaterialNonLinearIntegrator.cxx
  DirichletBoundaryCondition.cxx
  DirichletBoundaryConditionBase.cxx
  UniformDirichletBoundaryCondition.cxx
  PostProcessing.cxx
  PostProcessingFactory.cxx
  ComputeResultantForceOnBoundary.cxx
  LinearSolverFactory.cxx
  AbstractNonLinearEvolutionProblem.cxx
  NonLinearEvolutionProblemImplementationBase.cxx
  NonLinearEvolutionProblemImplementation.cxx
  NonLinearEvolutionProblem.cxx
  PeriodicNonLinearEvolutionProblem.cxx
  IsotropicTridimensionalStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  IsotropicTridimensionalStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStrainStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStrainStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStressStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStressStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicTridimensionalStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicTridimensionalStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStrainStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStrainStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStressStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStressStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  AnalyticalTests.cxx
)

if(OpenMP_FOUND)
  target_link_libraries(MFEMMGIS
    PUBLIC OpenMP::OpenMP_CXX)
endif(OpenMP_FOUND)

