
set(MFEMMGIS_SOURCES)
list(APPEND MFEMMGIS_SOURCES
  Config.cxx
  MPI.cxx
  Profiler.cxx
  Parameter.cxx
  Parameters.cxx
  FiniteElementDiscretization.cxx
  PartialQuadratureSpace.cxx
  PartialQuadratureFunction.cxx
  PartialQuadratureFunctionUtilities.cxx
  Behaviour.cxx
  Material.cxx
  AbstractBehaviourIntegrator.cxx
  BehaviourIntegratorBase.cxx
  BehaviourIntegratorFactory.cxx
  MultiMaterialNonLinearIntegrator.cxx
  DirichletBoundaryCondition.cxx
  DirichletBoundaryConditionBase.cxx
  UniformDirichletBoundaryCondition.cxx
  AbstractBoundaryCondition.cxx
  UniformHeatSourceBoundaryCondition.cxx
  UniformImposedPressureBoundaryCondition.cxx
  ImposedDirichletBoundaryConditionAtClosestNode.cxx
  PostProcessing.cxx
  PostProcessingFactory.cxx
  ParaviewExportIntegrationPointResultsAtNodes.cxx
  ComputeResultantForceOnBoundary.cxx
  AbstractNonLinearEvolutionProblem.cxx
  NonLinearEvolutionProblemImplementationBase.cxx
  NonLinearEvolutionProblemImplementation.cxx
  NonLinearEvolutionProblem.cxx
  PeriodicNonLinearEvolutionProblem.cxx
  SolverUtilities.cxx
  LinearSolverHandler.cxx
  LinearSolverFactory.cxx
  NewtonSolver.cxx
  AnalyticalTests.cxx
  IsotropicTridimensionalStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  IsotropicTridimensionalStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStrainStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStrainStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStressStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStressStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicTridimensionalStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicTridimensionalStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStrainStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStrainStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStressStandardFiniteStrainMechanicsBehaviourIntegrator.cxx
  OrthotropicPlaneStressStandardSmallStrainMechanicsBehaviourIntegrator.cxx
  IsotropicPlaneStressStationaryNonLinearHeatTransferBehaviourIntegrator.cxx
  OrthotropicPlaneStressStationaryNonLinearHeatTransferBehaviourIntegrator.cxx
  IsotropicPlaneStrainStationaryNonLinearHeatTransferBehaviourIntegrator.cxx
  OrthotropicPlaneStrainStationaryNonLinearHeatTransferBehaviourIntegrator.cxx
  IsotropicTridimensionalStationaryNonLinearHeatTransferBehaviourIntegrator.cxx
  OrthotropicTridimensionalStationaryNonLinearHeatTransferBehaviourIntegrator.cxx
  BidimensionalMicromorphicDamageBehaviourIntegrator.cxx
  OrthotropicBidimensionalMicromorphicDamageBehaviourIntegrator.cxx
  TridimensionalMicromorphicDamageBehaviourIntegrator.cxx
  TransientHeatTransferBehaviourIntegrator.cxx
  L2Projection.cxx)

if(MGIS_FUNCTION_SUPPORT AND MGIS_HAVE_TFEL)
  list(APPEND MFEMMGIS_SOURCES
       PartialQuadratureFunctionEvaluator.cxx
       MechanicalPostProcessings.cxx
       PartialQuadratureFunctionsSet.cxx)
endif(MGIS_FUNCTION_SUPPORT AND MGIS_HAVE_TFEL)

mfem_mgis_library(MFEMMGIS ${MFEMMGIS_SOURCES})

if(OpenMP_FOUND)
  target_link_libraries(MFEMMGIS
    PUBLIC OpenMP::OpenMP_CXX)
endif(OpenMP_FOUND)

